<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="never|withText"
        android:title="@string/edit"></item>
    <item
        android:id="@+id/action_follow"
        android:icon="@drawable/ic_action_accept"
        android:showAsAction="always|withText"
        android:title="@string/follow"></item>
    <item
        android:id="@+id/action_quit"
        android:icon="@drawable/ic_action_undo"
        android:showAsAction="never|withText"
        android:title="@string/quit"></item>
    <item
        android:id="@+id/action_apply"
        android:icon="@drawable/ic_action_save"
        android:showAsAction="always|withText"
        android:title="@string/save"></item>

</menu>