<?xml version="1.0" encoding="utf-8"?><!--<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:foregroundGravity="center">-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/EdustyBackground"
    android:focusable="true">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editEmail"
        android:hint="@string/eMail"
        android:inputType="textEmailAddress"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editPasswd"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editEmail"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_margin="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editName"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editPasswd"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:layout_margin="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editLastName"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editName"
        android:hint="@string/lastName"
        android:inputType="text|textPersonName"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/license"
        android:id="@+id/textView"

        android:layout_below="@+id/editLastName"
        android:layout_alignParentLeft="true"
        android:paddingTop="10dp"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_of_service"
        android:id="@+id/textView2"
        android:onClick="onClickLicenseString"
        android:clickable="true"
        android:textIsSelectable="true"
        android:layout_alignBottom="@+id/textView"
        android:layout_toRightOf="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/btnReg"
        android:onClick="OnClickBtnReg"
        android:gravity="center"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout><!--
</ScrollView>-->
