<?xml version="1.0" encoding="utf-8"?>

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/EdustyBackground"
    android:focusable="true">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etTitle"
        android:hint="@string/title"
        android:layout_margin="5dp"
        android:inputType="none"
        android:singleLine="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etDescription"
        android:layout_margin="5dp"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etLocation"
        android:layout_margin="5dp"
        android:hint="@string/location"
        android:inputType="none"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starttime"
        android:layout_gravity="left|center_vertical"
        android:layout_margin="5dp" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Holo.Spinner"
            android:hint="Date"
            android:onClick="onClickStartDatePick"
            android:id="@+id/tvDate"
            android:layout_weight="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            style="@android:style/Widget.Holo.Spinner"
            android:hint="Time"
            android:onClick="onClickStartTimePick"
            android:id="@+id/tvTime"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endtime"
            android:layout_column="0"
            android:layout_margin="5dp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Holo.Spinner"
            android:hint="@string/date"
            android:onClick="onClickEndDatePick"
            android:id="@+id/tvEndDate"
            android:layout_weight="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            style="@android:style/Widget.Holo.Spinner"
            android:hint="@string/time"
            android:onClick="onClickEndTimePick"
            android:id="@+id/tvEndTime"
            android:layout_weight="1" />
    </TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat"
        android:id="@+id/textView" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spInterval"
        android:entries="@array/intervals"
        android:layout_column="0"
        android:layout_margin="5dp"
        android:spinnerMode="dialog" />

</TableLayout>