<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    style="@style/EdustyBackground">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvName"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:hint="@string/title"
        android:layout_margin="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvDescription"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvName"
        android:hint="@string/description"
        android:layout_margin="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/groupWebSite"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvDescription"
        android:hint="@string/website"
        android:layout_margin="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/btnCreate"
        android:onClick="onClickBtnCreateGroup"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/groupWebSite" />

</RelativeLayout>