<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="left"
    style="@style/EdustyBackground"
    android:focusable="true">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:hint="@string/eMail"
        android:layout_margin="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etEmail"
        android:hint="@string/password"
        android:layout_margin="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowRadius="15"
        android:text="@string/sign_in"
        android:id="@+id/btnLogIn"
        android:onClick="OnClickBtnLogIn"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:textStyle="bold"
        style="@style/Button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignUp"
        android:onClick="OnClickBtnSignUp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:layout_below="@+id/btnLogIn"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/sign_up"
        android:background="@android:color/transparent" />

</RelativeLayout>