<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    android:foregroundGravity="center">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        style="@style/EdustyBackground">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etFirstName"
            android:layout_gravity="center"
            android:hint="@string/firstName"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etLastName"
            android:layout_gravity="center"
            android:hint="@string/lastName"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/etFirstName"
            android:layout_alignLeft="@+id/etFirstName" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etMiddleName"
            android:layout_gravity="center"
            android:hint="@string/middleName"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/etLastName"
            android:layout_alignLeft="@+id/etLastName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etBirthDate"
            android:onClick="onClickEditBirthDate"
            android:layout_gravity="center"
            android:hint="@string/birthDate"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/etMiddleName"
            android:layout_alignLeft="@+id/etMiddleName"
            style="@android:style/Widget.Holo.Spinner"
            android:layout_alignRight="@+id/etMiddleName" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmail"
            android:layout_gravity="center"
            android:hint="@string/eMail"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/etBirthDate"
            android:layout_alignLeft="@+id/etBirthDate" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/etPhone"
            android:layout_gravity="center"
            android:hint="@string/phone"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/etEmail"
            android:layout_alignLeft="@+id/etEmail" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spCountry"
            android:layout_gravity="center"
            android:spinnerMode="dialog"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/etPhone"
            android:layout_alignLeft="@+id/etPhone"
            android:layout_alignRight="@+id/etPhone" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/etCity"
            android:layout_gravity="center"
            android:hint="@string/city"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/spCountry"
            android:layout_alignLeft="@+id/spCountry" />

    </RelativeLayout>
</ScrollView>