<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/tvDate"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mark"
        android:id="@+id/tvType"
        android:layout_below="@+id/tvDate"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvMark"
        android:layout_below="@+id/tvDate"
        android:layout_toRightOf="@+id/tvType"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:id="@+id/tvDescription"
        android:layout_below="@+id/tvType"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp" />

</RelativeLayout>