<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/EdustyBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:background="#20ffffff"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Title"
            android:id="@+id/tvTitle"
            android:layout_gravity="center"
            android:layout_margin="5dp" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="left|center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starttime"
                android:id="@+id/textViewWebSite"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="StartTime"
                android:id="@+id/tvStartTime"
                android:layout_gravity="left|center_vertical"
                android:layout_margin="5dp"
                android:textStyle="bold|italic" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="left|center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endtime"
                android:id="@+id/textView2"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="EndDate"
                android:id="@+id/tvEndDate"
                android:layout_margin="5dp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="left|center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interval"
                android:id="@+id/textView3"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Interval"
                android:id="@+id/tvInterval"
                android:layout_margin="5dp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="left|center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:id="@+id/textView4"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="location"
                android:id="@+id/tvLocation"
                android:layout_margin="5dp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="left|center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group"
                android:id="@+id/textView5"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="group"
                android:id="@+id/tvGroup"
                android:layout_margin="5dp"
                android:textStyle="bold|italic" />
        </TableRow>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|center_vertical"
        android:background="#20ffffff"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/description"
            android:id="@+id/textView6"
            android:layout_gravity="center" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description"
                android:id="@+id/tvDescription"
                android:textSize="18dp" />
        </ScrollView>

    </LinearLayout>

</LinearLayout>